# determinant

./: CMakeLists.txt  main.cpp
solver/: common.cpp  solve_c_array.cpp  solve_c_flat.cpp  solve_permutation.cpp  solve_vector.cpp  solve_vector_simple.cpp  solver.h
solver/web/: main.c  main.cpp  solve_web.c  solve_web.cpp
tests/: tests.cpp  time_measure.cpp
